tests/harness/errors/105_base64_decode_invalid.eu
# Error: invalid base64 input
result: "not valid base64!!!" str.base64-decode
